--- a/ClassKkpo.ipynb
+++ b/ClassKkpo.ipynb
@@ -35,89 +35,142 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "go through the files and make a list of files for each region\n",
+    "\n",
+    "go through the files in each region and "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'file_path': '/Volumes/FlashSSD2/20220415_143603_GFPwGBDE01T01'}\n",
-      "unique sample names: ['S000']\n",
-      "unique view names: ['V000']\n",
-      "unique region names: ['R0000']\n",
-      "unique tileX names: ['X000']\n",
-      "unique tileY names: ['Y000']\n",
-      "unique chanel names: ['C00' 'C01' 'C02']\n",
-      "unique illumination names: ['I0' 'I1']\n",
-      "************************\n",
-      "num channels is 3\n",
-      "num trans images is 0\n",
-      "num 405 images is 0\n",
-      "num 488 images is 368\n",
-      "num 561 images is 369\n",
-      "num 640 images is 370\n",
-      "************************\n"
+      "*********************************************\n",
+      "I can't make a Kakapo without a file path!\n",
+      "*********************************************\n"
+     ]
+    },
+    {
+     "ename": "SystemExit",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[0;31mSystemExit\u001b[0m\n"
      ]
     }
    ],
    "source": [
     "import os\n",
+    "import sys\n",
     "import numpy as np\n",
+    "from pathlib import Path\n",
     "\n",
     "class Kkpo:\n",
     "\n",
-    "    def __init__(self, file_path):\n",
+    "    def __init__(self, file_path=None):\n",
+    "        if file_path == None:\n",
+    "            print('*****'*9)\n",
+    "            print(\"I can't make a Kakapo without a file path!\")\n",
+    "            print('*****'*9)\n",
+    "            sys.exit()\n",
+    "        self.file_path = Path(file_path)\n",
+    "        self.files = [file for file in os.listdir(self.file_path) if file.endswith('.tif') and not file.startswith('.') and not 'MP' in file]\n",
+    "        self.timepoint_names = [file.split('_')[1] for file in self.files]\n",
+    "        self.region_names = [file.split('_')[3] for file in self.files]\n",
+    "        self.channel_names = [file.split('_')[6] for file in self.files]\n",
+    "        self.illum_names = [file.split('_')[7] for file in self.files]\n",
     "\n",
-    "        self.file_path = file_path\n",
+    "        self.num_regions = len(np.unique(self.region_names))\n",
+    "        self.num_channels = len(np.unique(self.channel_names))\n",
+    "        self.num_illum = len(np.unique(self.illum_names))\n",
+    "        self.num_timepoints = len(np.unique(self.timepoint_names))\n",
+    "        self.get_interval()\n",
     "\n",
-    "    def get_dimensions(self):\n",
-    "        files = [file for file in os.listdir(self.file_path) if file.endswith('.tif') and not file.startswith('.') and not 'MP' in file]\n",
-    "        sample_names = [file.split('_')[0] for file in files]\n",
-    "        timepoint_names = [file.split('_')[1] for file in files]\n",
-    "        view_names = [file.split('_')[2] for file in files]\n",
-    "        region_names = [file.split('_')[3] for file in files]\n",
-    "        tileX_names = [file.split('_')[4] for file in files]\n",
-    "        tileY_names = [file.split('_')[5] for file in files]\n",
-    "        channel_names = [file.split('_')[6] for file in files]\n",
-    "        illum_names = [file.split('_')[7] for file in files]\n",
+    "    def get_interval(self):\n",
+    "        setting_files = [file for file in os.listdir(self.file_path) if \"Settings.txt\" in file and not file.startswith('.')]\n",
+    "        first_timepoint_name = [file for file in setting_files if all(match in file for match in [self.timepoint_names[0], self.region_names[0], self.channel_names[0], self.illum_names[0]])]\n",
+    "        last_timepoint_name = [file for file in setting_files if all(match in file for match in [self.timepoint_names[-1], self.region_names[0], self.channel_names[0], self.illum_names[0]])]\n",
+    "        first_timepoint_file = np.loadtxt(self.file_path / first_timepoint_name[0], dtype='str', delimiter = '/n')\n",
+    "        last_timepoint_file = np.loadtxt(self.file_path / last_timepoint_name[0], dtype='str', delimiter = '/n')\n",
+    "        first_timestamp_line = [line for line in first_timepoint_file if 'Date time stamp' in line][0]\n",
+    "        first_timestamp_val = first_timestamp_line.split('=')[-1]\n",
+    "        first_timestamp_date = int(first_timestamp_val.split('_')[0])\n",
+    "        first_timestamp_time = int(first_timestamp_val.split('_')[-1])\n",
+    "        print(first_timestamp_date)\n",
     "\n",
-    "        ch_640 = [file for file in files if 'C00' in file]\n",
-    "        ch_561 = [file for file in files if 'C01' in file]\n",
-    "        ch_488 = [file for file in files if 'C02' in file]\n",
-    "        ch_405 = [file for file in files if 'C03' in file]\n",
-    "        trans = [file for file in files if 'C04' in file]\n",
+    "    def parse_settings(self):\n",
+    "        pass\n",
+    "        \n",
     "\n",
-    "        print(f'unique sample names: {np.unique(sample_names)}')\n",
-    "        #print(f'unique time point names: {np.unique(timepoint_names)}')\n",
-    "        print(f'unique view names: {np.unique(view_names)}')\n",
-    "        print(f'unique region names: {np.unique(region_names)}')\n",
-    "        print(f'unique tileX names: {np.unique(tileX_names)}')\n",
-    "        print(f'unique tileY names: {np.unique(tileY_names)}')\n",
-    "        print(f'unique chanel names: {np.unique(channel_names)}')\n",
-    "        print(f'unique illumination names: {np.unique(illum_names)}')\n",
+    "kkpo = Kkpo()\n",
     "\n",
+    "print(kkpo.num_timepoints)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['<Workflow Settings>' '  <Experiment Settings>'\n",
+      " '    Plane spacing (um) = 2.5' '    Frame rate (f/s) = 33.335556'\n",
+      " '    Exposure time (us) = 29998'\n",
+      " '    Duration (dd:hh:mm:ss) = 00:13:00:00'\n",
+      " '    Interval (dd:hh:mm:ss) = 00:00:10:00' '    Sample = '\n",
+      " '    Number of angles = ' '    Angle step size = ' '    Region = 2'\n",
+      " '    Save image directory = /scratch/20220331_190533_EXP84'\n",
+      " '    Comments = BestExperimentEver' '    Save max projection = false'\n",
+      " '    Display max projection = false'\n",
+      " '    Save image data in tiff format = true'\n",
+      " '    Save image data in raw format = false'\n",
+      " '    Save to subfolders = false'\n",
+      " '    Work flow live view enabled = false' '  </Experiment Settings>'\n",
+      " '  <Camera Settings>' '    Exposure time (us) = 29998'\n",
+      " '    Frame rate (f/s) = 33.335556' '    AOI width = 2048'\n",
+      " '    AOI height = 2048' '  </Camera Settings>' '  <Stack Settings>'\n",
+      " '    Stack index = 2' '    Change in Z axis (mm) = 0.734'\n",
+      " '    Number of planes = 294' '    Number of planes saved = 0'\n",
+      " '    Stage velocity (mm/s) = 0.083339 mm/s'\n",
+      " '    Date time stamp = 20220331_190631'\n",
+      " '    Stack file name = /scratch/20220331_190533_EXP84/S000_t000000_V000_R0002_X000_Y000_C02_I0'\n",
+      " '    Camera 1 capture percentage = 5'\n",
+      " '    Camera 1 capture mode (0 full, 1 from front, 2 from back, 3 none) = 0'\n",
+      " '    Camera 1 capture range = 0 to 293'\n",
+      " '    Camera 2 capture percentage = 100'\n",
+      " '    Camera 2 capture mode (0 full, 1 from front, 2 from back, 3 none) = 0'\n",
+      " '    Camera 2 capture range = ' '    Stack option = None'\n",
+      " '    Stack option settings 2 = ' '     = ' '  </Stack Settings>'\n",
+      " '  <Start Position>' '    X (mm) = 13.819000' '    Y (mm) = 20.146000'\n",
+      " '    Z (mm) = 11.965' '    Angle (degrees) = -153.675'\n",
+      " '  </Start Position>' '  <End Position>' '    X (mm) = 13.819000'\n",
+      " '    Y (mm) = 20.146000' '    Z (mm) = 12.699'\n",
+      " '    Angle (degrees) = -153.675' '  </End Position>'\n",
+      " '  <Illumination Source>' '    Laser 1 640 nm = 0.00 0'\n",
+      " '    Laser 2 561 nm = 69.95 1' '    Laser 3 488 nm = 50.00 1'\n",
+      " '    Laser 4 405 nm = 50.00 1' '    LED_RGB_Board = 26.27 0'\n",
+      " '    LED selection = 0 0' '    LED DAC = 40810 0'\n",
+      " '  </Illumination Source>' '  <Illumination Path>' '    Left path = ON 1'\n",
+      " '    Right path = OFF 0' '  </Illumination Path>' '</Workflow Settings>']\n"
+     ]
+    }
+   ],
+   "source": [
+    "filepath = '/Volumes/FlashSSD2/song/S000_t000000_V000_R0002_X000_Y000_C02_I0_D0_P00294_Settings.txt'\n",
+    "file = np.loadtxt(filepath, dtype='str', delimiter = '/n')\n",
     "\n",
-    "        num_channels = 0\n",
-    "        for ch in [ch_640, ch_561, ch_488, ch_405, trans]:\n",
-    "            if len(ch) > 0:\n",
-    "                num_channels += 1\n",
-    "\n",
-    "        print('***'*8)\n",
-    "        print(f'num channels is {num_channels}')\n",
-    "        print(f'num trans images is {len(trans)}')\n",
-    "        print(f'num 405 images is {len(ch_405)}')\n",
-    "        print(f'num 488 images is {len(ch_488)}')\n",
-    "        print(f'num 561 images is {len(ch_561)}')\n",
-    "        print(f'num 640 images is {len(ch_640)}')\n",
-    "        print('***'*8)\n",
-    "    \n",
-    "\n",
-    "\n",
-    "kkpo = Kkpo(file_path = '/Volumes/FlashSSD2/20220415_143603_GFPwGBDE01T01')\n",
-    "print(vars(kkpo))\n",
-    "kkpo.get_dimensions()"
+    "print(file)"
    ]
   },
   {
@@ -158,8 +211,39 @@
    "outputs": [],
    "source": [
     "file = 'S000_t000000_V000_R0000_X000_Y000_C00_I0_D0_P00135.tif'\n",
-    "\n"
+    "\n",
+    "\n",
+    "        print(f'unique sample names: {np.unique(sample_names)}')\n",
+    "        #print(f'unique time point names: {np.unique(timepoint_names)}')\n",
+    "        print(f'unique view names: {np.unique(view_names)}')\n",
+    "        print(f'unique region names: {np.unique(region_names)}')\n",
+    "        print(f'unique tileX names: {np.unique(tileX_names)}')\n",
+    "        print(f'unique tileY names: {np.unique(tileY_names)}')\n",
+    "        print(f'unique chanel names: {np.unique(channel_names)}')\n",
+    "        print(f'unique illumination names: {np.unique(illum_names)}')\n",
+    "\n",
+    "        ch_640 = [file for file in files if 'C00' in file]\n",
+    "        ch_561 = [file for file in files if 'C01' in file]\n",
+    "        ch_488 = [file for file in files if 'C02' in file]\n",
+    "        ch_405 = [file for file in files if 'C03' in file]\n",
+    "        trans = [file for file in files if 'C04' in file]\n",
+    "\n",
+    "        print('***'*8)\n",
+    "        print(f'num channels is {num_channels}')\n",
+    "        print(f'num trans images is {len(trans)}')\n",
+    "        print(f'num 405 images is {len(ch_405)}')\n",
+    "        print(f'num 488 images is {len(ch_488)}')\n",
+    "        print(f'num 561 images is {len(ch_561)}')\n",
+    "        print(f'num 640 images is {len(ch_640)}')\n",
+    "        print('***'*8)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
