--- a/ClassKkpo.ipynb
+++ b/ClassKkpo.ipynb
@@ -45,25 +45,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "*********************************************\n",
-      "I can't make a Kakapo without a file path!\n",
-      "*********************************************\n"
-     ]
-    },
-    {
-     "ename": "SystemExit",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[0;31mSystemExit\u001b[0m\n"
+      "first timepoint date is  20220331\n",
+      "first timepoint time is 190535\n",
+      "last timepoint date is  20220331\n",
+      "last timepoint time is 205534\n",
+      "14999\n",
+      "0:00:00\n",
+      "12\n"
      ]
     }
    ],
@@ -72,6 +67,7 @@
     "import sys\n",
     "import numpy as np\n",
     "from pathlib import Path\n",
+    "from datetime import date \n",
     "\n",
     "class Kkpo:\n",
     "\n",
@@ -101,16 +97,34 @@
     "        first_timepoint_file = np.loadtxt(self.file_path / first_timepoint_name[0], dtype='str', delimiter = '/n')\n",
     "        last_timepoint_file = np.loadtxt(self.file_path / last_timepoint_name[0], dtype='str', delimiter = '/n')\n",
     "        first_timestamp_line = [line for line in first_timepoint_file if 'Date time stamp' in line][0]\n",
+    "        last_timestamp_line = [line for line in last_timepoint_file if 'Date time stamp' in line][0]\n",
     "        first_timestamp_val = first_timestamp_line.split('=')[-1]\n",
-    "        first_timestamp_date = int(first_timestamp_val.split('_')[0])\n",
+    "        last_timestamp_val = last_timestamp_line.split('=')[-1]\n",
+    "        first_timestamp_date_raw = first_timestamp_val.split('_')[0]\n",
+    "        last_timestamp_date_raw = last_timestamp_val.split('_')[0]\n",
+    "\n",
+    "        d0 = date(int(first_timestamp_date_raw[0:5]), int(first_timestamp_date_raw[5:7]), int(first_timestamp_date_raw[7:9]))\n",
+    "        d1 = date(int(last_timestamp_date_raw[0:5]), int(last_timestamp_date_raw[5:7]), int(last_timestamp_date_raw[7:9]))\n",
     "        first_timestamp_time = int(first_timestamp_val.split('_')[-1])\n",
-    "        print(first_timestamp_date)\n",
+    "        last_timestamp_time = int(last_timestamp_val.split('_')[-1])\n",
+    "        print(f'first timepoint date is {first_timestamp_date_raw}')\n",
+    "        print(f'first timepoint time is {first_timestamp_time}')\n",
+    "        print(f'last timepoint date is {last_timestamp_date_raw}')\n",
+    "        print(f'last timepoint time is {last_timestamp_time}')\n",
+    "        # calculate interval from first and last timepoint\n",
+    "        hours = last_timestamp_time - first_timestamp_time\n",
+    "        print(hours)\n",
+    "        print(d1-d0)\n",
     "\n",
     "    def parse_settings(self):\n",
     "        pass\n",
     "        \n",
+    "'''\n",
     "\n",
-    "kkpo = Kkpo()\n",
+    "convert this to min sec etc with datetime\n",
+    "'''\n",
+    "\n",
+    "kkpo = Kkpo('E:\\kkpo_test\\song')\n",
     "\n",
     "print(kkpo.num_timepoints)"
    ]
@@ -248,10 +262,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "c5c7d5aa80c35ae304e70bc4694215fb1ab981938c4772a7665046f80bbf53d5"
+   "hash": "0bcebb60750f4ab85b4479e9e54d661a2eef6ceb08c942dd15c4d95aee426382"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.9 ('napari4')",
+   "display_name": "Python 3.10.4 ('kkpo_dev')",
    "language": "python",
    "name": "python3"
   },
@@ -265,7 +279,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.10.4"
   },
   "orig_nbformat": 4
  },
