--- a/ClassKkpo.ipynb
+++ b/ClassKkpo.ipynb
@@ -94,6 +94,14 @@
     "        setting_files = [file for file in os.listdir(self.file_path) if \"Settings.txt\" in file and not file.startswith('.')]\n",
     "        first_timepoint_name = [file for file in setting_files if all(match in file for match in [self.timepoint_names[0], self.region_names[0], self.channel_names[0], self.illum_names[0]])]\n",
     "        last_timepoint_name = [file for file in setting_files if all(match in file for match in [self.timepoint_names[-1], self.region_names[0], self.channel_names[0], self.illum_names[0]])]\n",
+    "        # quality control\n",
+    "        if len(first_timepoint_name) != 1 or len(last_timepoint_name) != 1:\n",
+    "            print('*****'*9)\n",
+    "            print(f'EEROR:Problem with the settings file!\\n{len(first_timepoint_name)} first and {len(last_timepoint_name)} last timepoint names found.\\n',\n",
+    "                  f'Expected 1 first and 1 last timepoint name. Exiting...')\n",
+    "            print('*****'*9)\n",
+    "            sys.exit()\n",
+    "        # read the settings file, get the start and end times\n",
     "        first_timepoint_file = np.loadtxt(self.file_path / first_timepoint_name[0], dtype='str', delimiter = '/n')\n",
     "        last_timepoint_file = np.loadtxt(self.file_path / last_timepoint_name[0], dtype='str', delimiter = '/n')\n",
     "        first_timestamp_line = [line for line in first_timepoint_file if 'Date time stamp' in line][0]\n",
