--- a/ClassKkpo.ipynb
+++ b/ClassKkpo.ipynb
@@ -45,34 +45,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "unique sample names are ['S000']\n",
-      "unique timepoint names are ['t000000' 't000001' 't000002' 't000003' 't000004' 't000005' 't000006'\n",
-      " 't000007' 't000008' 't000009' 't000010' 't000011']\n",
-      "unique view names are ['V000']\n",
-      "unique region names are ['R0000' 'R0001' 'R0002' 'R0003' 'R0004']\n",
-      "unique tileX names are ['X000']\n",
-      "unique tileY names are ['Y000']\n",
-      "unique channel names are ['C01' 'C02' 'C03']\n",
-      "unique illum names are ['I0']\n",
-      "unique camera names are ['D0']\n",
-      "unique planes are ['P00157.tif' 'P00190.tif' 'P00192.tif' 'P00269.tif' 'P00294.tif']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Calculating max projections: 100%|██████████| 180/180 [04:08<00:00,  1.38s/it]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import sys\n",
@@ -80,7 +55,11 @@
     "from tqdm import tqdm\n",
     "from pathlib import Path\n",
     "from datetime import datetime\n",
-    "from tifffile import imread, imwrite\n",
+    "from tifffile import imread as tiff_read\n",
+    "from tifffile import imwrite as tiff_write\n",
+    "from dask_image.imread import imread as dask_read\n",
+    "#from dask.array.image import imread as dask_read \n",
+    "import dask.array as da\n",
     "\n",
     "class Kkpo:\n",
     "\n",
@@ -185,8 +164,8 @@
     "        '''\n",
     "        # create a folder to save the max projections\n",
     "        self.max_proj_path = self.file_path / 'max_projections'\n",
-    "        if not os.path.exists(max_proj_path):\n",
-    "            os.mkdir(max_proj_path)\n",
+    "        if not os.path.exists(self.max_proj_path):\n",
+    "            os.mkdir(self.max_proj_path)\n",
     "        \n",
     "        max_projection = np.zeros((2048,2048))\n",
     "        its = self.num_samples*self.num_timepoints*self.num_views*self.num_regions*self.num_tilesX*self.num_tilesY*self.num_channels*self.num_illum*self.num_cameras\n",
@@ -210,38 +189,239 @@
     "                                                                                                                              self.channel_names[chan], \n",
     "                                                                                                                              self.illum_names[illum], \n",
     "                                                                                                                              self.camera_names[cam]]])][0]\n",
-    "                                                img = imread(self.file_path / file_name)\n",
+    "                                                img = tiff_read(self.file_path / file_name)\n",
     "                                                max_projection = np.max(img, axis=0)\n",
-    "                                                imwrite(self.max_proj_path /  f'{self.sample_names[samp]}_{self.timepoint_names[time]}_{self.view_names[view]}_{self.region_names[reg]}_{self.tileX_names[tileX]}_{self.tileY_names[tileY]}_{self.channel_names[chan]}_{self.illum_names[illum]}_{self.camera_names[cam]}_max_projection.tif', max_projection)\n",
+    "                                                tiff_write(self.max_proj_path /  f'{self.sample_names[samp]}_{self.timepoint_names[time]}_{self.view_names[view]}_{self.region_names[reg]}_{self.tileX_names[tileX]}_{self.tileY_names[tileY]}_{self.channel_names[chan]}_{self.illum_names[illum]}_{self.camera_names[cam]}_max_projection.tif', max_projection)\n",
     "                                                pbar.update(1)\n",
-    "\n",
-    "kkpo = Kkpo('/Volumes/bigData/kkpo_test/song')\n",
-    "#print(np.unique(kkpo.planes))\n",
-    "interval = kkpo.get_interval()\n",
-    "kkpo.save_max_project()"
+    "    def interact(self):\n",
+    "        ''' \n",
+    "        Dask/Napari interactive workflow\n",
+    "        '''\n",
+    "        \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I want to use dask to identify different regions and open them as dask arrays. \n",
+    "Then I can use Napari to interactively visualize different regions."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "list indices must be integers or slices, not list",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/Users/bementmbp/Desktop/Scripts/Flamingo_scripts/ClassKkpo.ipynb Cell 4'\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/bementmbp/Desktop/Scripts/Flamingo_scripts/ClassKkpo.ipynb#ch0000003?line=0'>1</a>\u001b[0m test \u001b[39m=\u001b[39m [\u001b[39m'\u001b[39m\u001b[39mP00157.tif\u001b[39m\u001b[39m'\u001b[39m \u001b[39m'\u001b[39m\u001b[39mP00190.tif\u001b[39m\u001b[39m'\u001b[39m \u001b[39m'\u001b[39m\u001b[39mP00192.tif\u001b[39m\u001b[39m'\u001b[39m \u001b[39m'\u001b[39m\u001b[39mP00269.tif\u001b[39m\u001b[39m'\u001b[39m \u001b[39m'\u001b[39m\u001b[39mP00294.tif\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/bementmbp/Desktop/Scripts/Flamingo_scripts/ClassKkpo.ipynb#ch0000003?line=1'>2</a>\u001b[0m mask \u001b[39m=\u001b[39m [\u001b[39mTrue\u001b[39;00m, \u001b[39mFalse\u001b[39;00m, \u001b[39mFalse\u001b[39;00m, \u001b[39mFalse\u001b[39;00m, \u001b[39mFalse\u001b[39;00m]\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/bementmbp/Desktop/Scripts/Flamingo_scripts/ClassKkpo.ipynb#ch0000003?line=2'>3</a>\u001b[0m mask[test]\n",
-      "\u001b[0;31mTypeError\u001b[0m: list indices must be integers or slices, not list"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "unique sample names are ['S000']\n",
+      "unique timepoint names are ['t000000' 't000001' 't000002' 't000003' 't000004' 't000005' 't000006'\n",
+      " 't000007' 't000008' 't000009' 't000010' 't000011']\n",
+      "unique view names are ['V000']\n",
+      "unique region names are ['R0000' 'R0001' 'R0002' 'R0003' 'R0004']\n",
+      "unique tileX names are ['X000']\n",
+      "unique tileY names are ['Y000']\n",
+      "unique channel names are ['C01' 'C02' 'C03']\n",
+      "unique illum names are ['I0']\n",
+      "unique camera names are ['D0']\n",
+      "unique planes are ['P00157.tif' 'P00190.tif' 'P00192.tif' 'P00269.tif' 'P00294.tif']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <td>\n",
+       "            <table>\n",
+       "                <thead>\n",
+       "                    <tr>\n",
+       "                        <td> </td>\n",
+       "                        <th> Array </th>\n",
+       "                        <th> Chunk </th>\n",
+       "                    </tr>\n",
+       "                </thead>\n",
+       "                <tbody>\n",
+       "                    \n",
+       "                    <tr>\n",
+       "                        <th> Bytes </th>\n",
+       "                        <td> 51.95 GiB </td>\n",
+       "                        <td> 1.48 GiB </td>\n",
+       "                    </tr>\n",
+       "                    \n",
+       "                    <tr>\n",
+       "                        <th> Shape </th>\n",
+       "                        <td> (35, 190, 2048, 2048) </td>\n",
+       "                        <td> (1, 190, 2048, 2048) </td>\n",
+       "                    </tr>\n",
+       "                    <tr>\n",
+       "                        <th> Count </th>\n",
+       "                        <td> 70 Tasks </td>\n",
+       "                        <td> 35 Chunks </td>\n",
+       "                    </tr>\n",
+       "                    <tr>\n",
+       "                    <th> Type </th>\n",
+       "                    <td> uint16 </td>\n",
+       "                    <td> numpy.ndarray </td>\n",
+       "                    </tr>\n",
+       "                </tbody>\n",
+       "            </table>\n",
+       "        </td>\n",
+       "        <td>\n",
+       "        <svg width=\"388\" height=\"192\" style=\"stroke:rgb(0,0,0);stroke-width:1\" >\n",
+       "\n",
+       "  <!-- Horizontal lines -->\n",
+       "  <line x1=\"0\" y1=\"0\" x2=\"28\" y2=\"0\" style=\"stroke-width:2\" />\n",
+       "  <line x1=\"0\" y1=\"25\" x2=\"28\" y2=\"25\" style=\"stroke-width:2\" />\n",
+       "\n",
+       "  <!-- Vertical lines -->\n",
+       "  <line x1=\"0\" y1=\"0\" x2=\"0\" y2=\"25\" style=\"stroke-width:2\" />\n",
+       "  <line x1=\"0\" y1=\"0\" x2=\"0\" y2=\"25\" />\n",
+       "  <line x1=\"1\" y1=\"0\" x2=\"1\" y2=\"25\" />\n",
+       "  <line x1=\"2\" y1=\"0\" x2=\"2\" y2=\"25\" />\n",
+       "  <line x1=\"3\" y1=\"0\" x2=\"3\" y2=\"25\" />\n",
+       "  <line x1=\"4\" y1=\"0\" x2=\"4\" y2=\"25\" />\n",
+       "  <line x1=\"4\" y1=\"0\" x2=\"4\" y2=\"25\" />\n",
+       "  <line x1=\"5\" y1=\"0\" x2=\"5\" y2=\"25\" />\n",
+       "  <line x1=\"6\" y1=\"0\" x2=\"6\" y2=\"25\" />\n",
+       "  <line x1=\"7\" y1=\"0\" x2=\"7\" y2=\"25\" />\n",
+       "  <line x1=\"8\" y1=\"0\" x2=\"8\" y2=\"25\" />\n",
+       "  <line x1=\"9\" y1=\"0\" x2=\"9\" y2=\"25\" />\n",
+       "  <line x1=\"10\" y1=\"0\" x2=\"10\" y2=\"25\" />\n",
+       "  <line x1=\"11\" y1=\"0\" x2=\"11\" y2=\"25\" />\n",
+       "  <line x1=\"12\" y1=\"0\" x2=\"12\" y2=\"25\" />\n",
+       "  <line x1=\"12\" y1=\"0\" x2=\"12\" y2=\"25\" />\n",
+       "  <line x1=\"13\" y1=\"0\" x2=\"13\" y2=\"25\" />\n",
+       "  <line x1=\"14\" y1=\"0\" x2=\"14\" y2=\"25\" />\n",
+       "  <line x1=\"15\" y1=\"0\" x2=\"15\" y2=\"25\" />\n",
+       "  <line x1=\"16\" y1=\"0\" x2=\"16\" y2=\"25\" />\n",
+       "  <line x1=\"16\" y1=\"0\" x2=\"16\" y2=\"25\" />\n",
+       "  <line x1=\"17\" y1=\"0\" x2=\"17\" y2=\"25\" />\n",
+       "  <line x1=\"19\" y1=\"0\" x2=\"19\" y2=\"25\" />\n",
+       "  <line x1=\"20\" y1=\"0\" x2=\"20\" y2=\"25\" />\n",
+       "  <line x1=\"20\" y1=\"0\" x2=\"20\" y2=\"25\" />\n",
+       "  <line x1=\"21\" y1=\"0\" x2=\"21\" y2=\"25\" />\n",
+       "  <line x1=\"22\" y1=\"0\" x2=\"22\" y2=\"25\" />\n",
+       "  <line x1=\"23\" y1=\"0\" x2=\"23\" y2=\"25\" />\n",
+       "  <line x1=\"24\" y1=\"0\" x2=\"24\" y2=\"25\" />\n",
+       "  <line x1=\"24\" y1=\"0\" x2=\"24\" y2=\"25\" />\n",
+       "  <line x1=\"25\" y1=\"0\" x2=\"25\" y2=\"25\" />\n",
+       "  <line x1=\"26\" y1=\"0\" x2=\"26\" y2=\"25\" />\n",
+       "  <line x1=\"28\" y1=\"0\" x2=\"28\" y2=\"25\" style=\"stroke-width:2\" />\n",
+       "\n",
+       "  <!-- Colored Rectangle -->\n",
+       "  <polygon points=\"0.0,0.0 28.15928456072071,0.0 28.15928456072071,25.412616514582485 0.0,25.412616514582485\" style=\"fill:#8B4903A0;stroke-width:0\"/>\n",
+       "\n",
+       "  <!-- Text -->\n",
+       "  <text x=\"14.079642\" y=\"45.412617\" font-size=\"1.0rem\" font-weight=\"100\" text-anchor=\"middle\" >35</text>\n",
+       "  <text x=\"48.159285\" y=\"12.706308\" font-size=\"1.0rem\" font-weight=\"100\" text-anchor=\"middle\" transform=\"rotate(0,48.159285,12.706308)\">1</text>\n",
+       "\n",
+       "\n",
+       "  <!-- Horizontal lines -->\n",
+       "  <line x1=\"98\" y1=\"0\" x2=\"120\" y2=\"22\" style=\"stroke-width:2\" />\n",
+       "  <line x1=\"98\" y1=\"120\" x2=\"120\" y2=\"142\" style=\"stroke-width:2\" />\n",
+       "\n",
+       "  <!-- Vertical lines -->\n",
+       "  <line x1=\"98\" y1=\"0\" x2=\"98\" y2=\"120\" style=\"stroke-width:2\" />\n",
+       "  <line x1=\"120\" y1=\"22\" x2=\"120\" y2=\"142\" style=\"stroke-width:2\" />\n",
+       "\n",
+       "  <!-- Colored Rectangle -->\n",
+       "  <polygon points=\"98.0,0.0 120.45712573841597,22.457125738415964 120.45712573841597,142.45712573841595 98.0,120.0\" style=\"fill:#ECB172A0;stroke-width:0\"/>\n",
+       "\n",
+       "  <!-- Horizontal lines -->\n",
+       "  <line x1=\"98\" y1=\"0\" x2=\"218\" y2=\"0\" style=\"stroke-width:2\" />\n",
+       "  <line x1=\"120\" y1=\"22\" x2=\"240\" y2=\"22\" style=\"stroke-width:2\" />\n",
+       "\n",
+       "  <!-- Vertical lines -->\n",
+       "  <line x1=\"98\" y1=\"0\" x2=\"120\" y2=\"22\" style=\"stroke-width:2\" />\n",
+       "  <line x1=\"218\" y1=\"0\" x2=\"240\" y2=\"22\" style=\"stroke-width:2\" />\n",
+       "\n",
+       "  <!-- Colored Rectangle -->\n",
+       "  <polygon points=\"98.0,0.0 218.0,0.0 240.45712573841595,22.457125738415964 120.45712573841597,22.457125738415964\" style=\"fill:#ECB172A0;stroke-width:0\"/>\n",
+       "\n",
+       "  <!-- Horizontal lines -->\n",
+       "  <line x1=\"120\" y1=\"22\" x2=\"240\" y2=\"22\" style=\"stroke-width:2\" />\n",
+       "  <line x1=\"120\" y1=\"142\" x2=\"240\" y2=\"142\" style=\"stroke-width:2\" />\n",
+       "\n",
+       "  <!-- Vertical lines -->\n",
+       "  <line x1=\"120\" y1=\"22\" x2=\"120\" y2=\"142\" style=\"stroke-width:2\" />\n",
+       "  <line x1=\"240\" y1=\"22\" x2=\"240\" y2=\"142\" style=\"stroke-width:2\" />\n",
+       "\n",
+       "  <!-- Colored Rectangle -->\n",
+       "  <polygon points=\"120.45712573841597,22.457125738415964 240.45712573841598,22.457125738415964 240.45712573841598,142.45712573841595 120.45712573841597,142.45712573841595\" style=\"fill:#ECB172A0;stroke-width:0\"/>\n",
+       "\n",
+       "  <!-- Text -->\n",
+       "  <text x=\"180.457126\" y=\"162.457126\" font-size=\"1.0rem\" font-weight=\"100\" text-anchor=\"middle\" >2048</text>\n",
+       "  <text x=\"260.457126\" y=\"82.457126\" font-size=\"1.0rem\" font-weight=\"100\" text-anchor=\"middle\" transform=\"rotate(-90,260.457126,82.457126)\">2048</text>\n",
+       "  <text x=\"99.228563\" y=\"151.228563\" font-size=\"1.0rem\" font-weight=\"100\" text-anchor=\"middle\" transform=\"rotate(45,99.228563,151.228563)\">190</text>\n",
+       "</svg>\n",
+       "        </td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "dask.array<_map_read_frame, shape=(35, 190, 2048, 2048), dtype=uint16, chunksize=(1, 190, 2048, 2048), chunktype=numpy.ndarray>"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kkpo = Kkpo('/Volumes/bigData/kkpo_test/song')\n",
+    "\n",
+    "region_dict = {}\n",
+    "#for region in kkpo.region_names:\n",
+    "region_dict['test'] = dask_read(kkpo.file_path /  ('*'+'R0003'+'*.tif'))\n",
+    "region_dict['test']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dask import distributed\n",
+    "client = distributed.Client()\n",
+    "print(client.dashboard_link)\n",
+    "\n",
+    "kkpo = Kkpo('/Volumes/bigData/kkpo_test/song')\n",
+    "channels = [dask_read(kkpo.file_path /  ('*'+'R0003'+'*'+channel+'*.tif')) for channel in kkpo.channel_names]\n",
+    "#stack = da.stack(channels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(294, 2048, 2048)\n"
      ]
     }
    ],
    "source": [
-    "test = ['P00157.tif' 'P00190.tif' 'P00192.tif' 'P00269.tif' 'P00294.tif']\n",
-    "mask = [True, False, False, False, False]\n",
-    "mask[test]"
+    "from dask_image.imread import imread as dask_read\n",
+    "import dask.array as da\n",
+    "\n",
+    "t = dask_read('/Volumes/bigData/kkpo_test/song/S000_t000011_V000_R0002_X000_Y000_C03_I0_D0_P00294.tif')\n",
+    "print(t.shape)\n",
+    "da.to_zarr(t, '/Volumes/bigData/kkpo_test/song/ITWORKED.zarr')"
    ]
   },
   {
@@ -254,7 +434,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.13 ('flow_and_reg')",
+   "display_name": "Python 3.9.12 ('image-analysis')",
    "language": "python",
    "name": "python3"
   },
@@ -268,12 +448,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "4d4e3945ed40a57cade3bda40300a6c490d03a89092af38fb7fb1763bd826a6b"
+    "hash": "f7ec4263e4001474e72c70f185906f427acb5774367a2b2d09b308b8269b701b"
    }
   }
  },
