--- a/ClassKkpo.ipynb
+++ b/ClassKkpo.ipynb
@@ -434,7 +434,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('image-analysis')",
+   "display_name": "Python 3.10.6 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -448,12 +448,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "f7ec4263e4001474e72c70f185906f427acb5774367a2b2d09b308b8269b701b"
+    "hash": "c11202d2846b22eec7deaf37ea813ba92a5f75b5344a4d16688175855af7948e"
    }
   }
  },
